[workspace]
members = [
    "crates/voltguard-api",
    "crates/voltguard-cli",
    "crates/voltguard-config",
    "crates/voltguard-core",
    "crates/voltguard-daemon",
    "crates/voltguard-engine",
    "crates/voltguard-hal",
    "crates/voltguard-policy",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "GPL-3.0+"
authors = ["mlm-games"]
rust-version = "1.77"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
uuid = { version = "1", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
    "json",
] }
bytes = "1"
tokio-util = { version = "0.7", features = ["codec"] }
tokio-serde = { version = "0.8", features = ["json"] }
bincode = "1"
schemars = "0.8"
figment = { version = "0.10", features = ["toml", "env"] }
toml = "0.8"
prometheus = "0.13"
nix = { version = "0.29", features = ["socket", "user"] }
dirs = "5"
async-trait = "0.1"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
